# azurveda

./: .gitignore  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  COPYING  README.md  VedaWindowsGPL.sln  VedaWindowsLGPL.sln  roadmap.md  vcpkg.json
Veda/: BaseContext.cpp  BaseContext.h  BaseObject.cpp  BaseObject.h  BaseType.cpp  BaseType.h  CMakeLists.txt  ClassNode.cpp  ClassNode.h  InterfacePrefObject.cpp  InterfacePrefObject.h  Makefile.i  MediaAccess.cpp  MediaAccess.h  MediaTimePattern.cpp  MediaTimePattern.h  NamedObject.cpp  NamedObject.h  PackDynamicType.cpp  PackDynamicType.h  PackFloat.cpp  PackFloat.h  PackFloatByte_Color.cpp  PackFloatByte_Color.h  PackFloatByte_Limits.cpp  PackFloatByte_Limits.h  PackFloat_FixedPoint.cpp  PackFloat_FixedPoint.h  PackList.cpp  PackList.h  PackList_TimeBlockTrack.cpp  PackList_TimeBlockTrack.h  PackList_TimeTrack.cpp  PackList_TimeTrack.h  PackLong.cpp  PackLong.h  PackLong_WithLimits.cpp  PackLong_WithLimits.h  PackObjectReference.cpp  PackObjectReference.h  (+26 more)
Veda/CodeExamples/: CMakeLists.txt  README
Veda/CodeExamples/E01_SimpleSerialization/: SimpleSerialization.cpp
Veda/CodeExamples/E02_SimpleMachineUse/: SimpleMachineUse.cpp
Veda/CodeExamples/E03_SimpleMediaClass/: SimpleMediaClass.cpp
VedaGUIWindowsMFC/: CMakeLists.txt  ChildFrm.cpp  ChildFrm.h  DialogEditWithReturn.cpp  DialogEditWithReturn.h  Dialog_AbstractPackSerializable.cpp  Dialog_AbstractPackSerializable.h  Dialog_PackDynamicType.cpp  Dialog_PackDynamicType.h  Dialog_PackFloat.cpp  Dialog_PackFloat.h  Dialog_PackFloatByte_Limits.cpp  Dialog_PackFloatByte_Limits.h  Dialog_PackListDynamic.cpp  Dialog_PackListDynamic.h  Dialog_PackLong_WithLimits.cpp  Dialog_PackLong_WithLimits.h  Dialog_PackReference.cpp  Dialog_PackReference.h  Dialog_PackResource.cpp  Dialog_PackResource.h  Dialog_PackSerializable.cpp  Dialog_PackSerializable.h  Dialog_PackString.cpp  Dialog_PackString.h  Dialog_PackStringMultiple.cpp  Dialog_PackStringMultiple.h  Dialog_PackStruct.cpp  Dialog_PackStruct.h  Dialog_PackTreeCell.cpp  Dialog_PackTreeCell.h  Dialog_PackULong.cpp  Dialog_PackULong.h  Dialog_PackULongEnums.cpp  Dialog_PackULongEnums.h  Dialog_PackULongFlags.cpp  Dialog_PackULongFlags.h  FormViewBaseObject.cpp  FormViewBaseObject.h  LeftView.cpp  (+30 more)
VedaLib3DEngine/: CMakeLists.txt  LightModel.cpp  LightModel.h  Makefile.i  Media3DView.cpp  Media3DView.h  ModifierObject3DColor.cpp  ModifierObject3DColor.h  ModifierObject3DSinusDisplace.cpp  ModifierObject3DSinusDisplace.h  ModifierObject3DVirtual.cpp  ModifierObject3DVirtual.h  Object3DGrid.cpp  Object3DGrid.h  Object3DLWOResource.cpp  Object3DLWOResource.h  Object3DMesh3D.cpp  Object3DMesh3D.h  Object3DMeshVirtual.cpp  Object3DMeshVirtual.h  Object3DMultiplier.cpp  Object3DMultiplier.h  Object3DScene.cpp  Object3DScene.h  Object3DVirtual.cpp  Object3DVirtual.h  Object3DVirtualDynamic.cpp  Object3DVirtualDynamic.h  ParticleSetEquation.cpp  ParticleSetEquation.h  ParticleSetVirtual.cpp  ParticleSetVirtual.h  README  RegisterLib3DEngine.cpp  RegisterLib3DEngine.h  RenderTargetRectangle.cpp  RenderTargetRectangle.h  RenderTargetTexture.cpp  RenderTargetTexture.h  RenderTargetVirtual.cpp  (+6 more)
VedaLibDemo/: CMakeLists.txt  Equ_XYZD_Particle.cpp  Equ_XYZD_Particle.h  Equ_XYZD_ParticleCubes.cpp  Equ_XYZD_ParticleCubes.h  Equ_XYZD_SinusWalls.cpp  Equ_XYZD_SinusWalls.h  Equ_XYZD_Tore.cpp  Equ_XYZD_Tore.h  Equ_XYZD_Virtual.cpp  Equ_XYZD_Virtual.h  Image2DEffectFire.cpp  Image2DEffectFire.h  Makefile.i  MarchinCubeSpace.cpp  MarchinCubeSpace.h  Object3DFontArial.cpp  Object3DFontArial.h  Object3DFontVirtual.cpp  Object3DFontVirtual.h  Object3DMarchCube.cpp  Object3DMarchCube.h  Object3DText.cpp  Object3DText.h  README  RegisterLibDemo.cpp  RegisterLibDemo.h  VedaLibDemo.vcproj
VedaLibImage/: BubbleGreyImage.cpp  BubbleGreyImage.h  CMakeLists.txt  GreyImage.cpp  GreyImage.h  GreyImage2nSquareSized.cpp  GreyImage2nSquareSized.h  ImplicitEquationImage.cpp  ImplicitEquationImage.h  Makefile.i  PerlinNoiseImage.cpp  PerlinNoiseImage.h  ProceduralImage.cpp  ProceduralImage.h  README  RGBAImage.cpp  RGBAImage.h  RegisterLibImage.cpp  RegisterLibImage.h  VedaLibImage.vcproj  VirtualImage.cpp  VirtualImage.h
VedaLibImageJPEG/: CMakeLists.txt  ImageJPEG.cpp  ImageJPEG.h  Makefile.i  README  (+11 more)
VedaLibMath/: CMakeLists.txt  EquationGamma.cpp  EquationGamma.h  EquationList.cpp  EquationList.h  EquationSinus3D.cpp  EquationSinus3D.h  EquationSoundSignal.cpp  EquationSoundSignal.h  EquationSpline_X.cpp  EquationSpline_X.h  EquationSpline_XY.cpp  EquationSpline_XY.h  EquationSpline_XYZ.cpp  EquationSpline_XYZ.h  Makefile.i  PackDynamicFloat.cpp  PackDynamicFloat.h  README  RegisterLibMath.cpp  RegisterLibMath.h  VedaLibMath.vcproj  VirtualEquation.cpp  VirtualEquation.h  VirtualEquationSpline.cpp  VirtualEquationSpline.h
VedaLibSoundMP3/: CMakeLists.txt  MP3SoundObject.cpp  MP3SoundObject.h  Makefile.i  README  RegisterLibSoundMP3.cpp  RegisterLibSoundMP3.h  VedaLibSoundMP3.vcproj  config.h  decoder.c  decoder.h  frame.c  huffman.c  layer3.c  mad.h  stream.h  timer.c
VedaLibSoundXM/: CMakeLists.txt  EquationXMEvent.cpp  EquationXMEvent.h  Makefile.i  README  RegisterLibSoundXM.cpp  RegisterLibSoundXM.h  VedaLibSoundXM.vcproj  XMSoundObject.cpp  XMSoundObject.h  uniminixm_Init.c  uniminixm_Refresh.c  uniminixm_StereoFloatMixer.c  uniminixm_functions.h  uniminixm_structs.h
VedaMachineOGLWinDxSound/: CMakeLists.txt  DefaultMachine.h  DemoRunBase.cpp  Example01_SimpleSerialization.vcproj  Example02_SimpleMachineUse.vcproj  Example03_SimpleMediaClass.vcproj  MakefileModel.i  MakefileVedaLib  MakefileVedaLib3DEngine  MakefileVedaLibDemo  MakefileVedaLibImage  MakefileVedaLibImageJPEG  MakefileVedaLibMath  MakefileVedaLibSoundBAOOM  MakefileVedaLibSoundMP3  MakefileVedaLibSoundXM  MakefileVedaMachineOGL  MakefileVedaMachineWindows  OGLMachineWinDxSound.cpp  OGLMachineWinDxSound.h  OGLMachineWinDxSound_Sound.cpp  README  VedaMachineOGLWinDxSound.vcproj  VedaMinGWinDevCpp.dev  VedaMinGWinDevCpp.layout  VedaMinGWinDevCpp_private.h  VedaMinGWinDevCpp_private.rc  demo.cpp
(+12 files in other folders)
